--- a/config/crd/bases/view.k8s.alicey.dev_markdownviews.yaml
+++ b/config/crd/bases/view.k8s.alicey.dev_markdownviews.yaml
@@ -15,7 +15,14 @@ spec:
     singular: markdownview
   scope: Namespaced
   versions:
-  - name: v1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.replicas
+      name: REPLICAS
+      type: integer
+    - jsonPath: .status
+      name: STATUS
+      type: string
+    name: v1
     schema:
       openAPIV3Schema:
         description: MarkdownView is the Schema for the markdownviews API
@@ -35,14 +42,30 @@ spec:
           spec:
             description: MarkdownViewSpec defines the desired state of MarkdownView
             properties:
-              foo:
-                description: Foo is an example field of MarkdownView. Edit markdownview_types.go
-                  to remove/update
+              markdowns:
+                additionalProperties:
+                  type: string
+                description: Markdowns contain the markdown files you want to display.
+                  The key indicates the file name and must not overlap with the keys.
+                  The value is the content in markdown format.
+                minProperties: 1
+                type: object
+              replicas:
+                default: 1
+                description: Replicas is the number of viewers.
+                format: int32
+                type: integer
+              viewerImage:
+                description: ViewerImage is the image name of the viewer.
                 type: string
             type: object
           status:
             description: MarkdownViewStatus defines the observed state of MarkdownView
-            type: object
+            enum:
+            - NotReady
+            - Available
+            - Healthy
+            type: string
         type: object
     served: true
     storage: true
